--- a/CalculatorApp/app/src/main/res/drawable/equal_button.xml
+++ b/CalculatorApp/app/src/main/res/drawable/equal_button.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorSecondaryVariant"/>
-            <corners android:radius="40dp"/>
+            <solid android:color="@color/operationOrange"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorSecondaryVariant"/>
-            <corners android:radius="40dp"/>
+            <solid android:color="@color/operationOrange"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 </selector>
