--- a/CalculatorApp/app/src/main/res/layout/single_pinned_currency_view.xml
+++ b/CalculatorApp/app/src/main/res/layout/single_pinned_currency_view.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/button_first_conversion"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/pinned_widget_background"
+    android:visibility="visible"
+    android:layout_margin="3dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+    <TextView
         android:id="@+id/name"
-        android:backgroundTint="?android:attr/colorAccent"
-        app:cornerRadius="50dp"
-        android:text="@string/pinned_currency_sample"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="0dp"
         android:fontFamily="@font/montserrat_bold"
-        android:textSize="12sp"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"/>
+        android:includeFontPadding="false"
+        android:padding="10dp"
+        android:text="@string/pinned_currency_sample"
+        android:textColor="?android:attr/textColor"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:cornerRadius="50dp" />
 
 </LinearLayout>
