--- a/CalculatorApp/app/src/main/res/layout/layout_calculator_widget.xml
+++ b/CalculatorApp/app/src/main/res/layout/layout_calculator_widget.xml
@@ -190,7 +190,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="70dp"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
@@ -199,37 +199,77 @@
         android:background="@drawable/output_widget_background"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/output"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:layout_gravity="end"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginEnd="21dp"
-            android:layout_marginBottom="3dp"
-            android:includeFontPadding="false"
-            android:fontFamily="@font/montserrat"
-            android:text=""
-            android:textAlignment="textEnd"
-            android:textSize="14sp" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginStart="21dp"
-            android:layout_marginEnd="21dp"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/montserrat_bold"
-            android:gravity="end"
-            android:includeFontPadding="false"
-            android:text="@string/_0"
-            android:textAlignment="textEnd"
-            android:textSize="22sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="end"
+                android:includeFontPadding="false"
+                android:text="0"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/conversion_rate_output_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:visibility="gone"
+                android:background="@drawable/currency_convert_background_widget"
+                app:layout_constraintBottom_toBottomOf="@+id/output"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible">
+
+                <TextView
+                    android:id="@+id/conversion_rate_output"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:includeFontPadding="false"
+                    android:padding="10dp"
+                    android:textColor="?android:attr/textColor"
+                    android:textSize="12sp"
+                    app:cornerRadius="50dp"
+                    tools:text="GBP/EUR (1.633)"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/output"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="end"
+                android:includeFontPadding="false"
+                android:text="@string/_0"
+                android:textAlignment="textEnd"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/input"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/conversion_rate_output_layout"
+                app:layout_constraintTop_toBottomOf="@+id/input" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
     <LinearLayout
