--- a/CalculatorApp/app/src/main/res/values/themes.xml
+++ b/CalculatorApp/app/src/main/res/values/themes.xml
@@ -8,10 +8,11 @@
         <item name="colorPrimary">?android:attr/colorBackground</item>
         <item name="colorOnPrimary">?android:attr/textColor</item>
         <item name="colorSecondary">@color/secondary</item>
-        <item name="colorSurface">@color/colorSurfaceLight</item>
+        <item name="colorSurface">@color/colorAccentLight</item>
         <item name="colorOnSecondaryContainer">@color/stroke</item>
         <item name="colorSecondaryVariant">@color/colorSurfaceVariantLight</item>
         <item name="android:colorAccent">@color/colorAccentLight</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Base.Theme.CalyxCalculatorWidget"
